--- a/about.html
+++ b/about.html
@@ -17,12 +17,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>About</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3968392978"/>
-  <link rel="stylesheet" type="text/css" href="css/about.css?crc=3780407552" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3870572421"/>
+  <link rel="stylesheet" type="text/css" href="css/about.css?crc=4165097356" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=3824530138"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_about.css?crc=489217892" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_about.css?crc=4092542238" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -36,7 +36,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    </head>
  <body class="museBGSize">
 
-  <div class="breakpoint active" id="bp_infinity" data-min-width="481"><!-- responsive breakpoint node -->
+  <div class="breakpoint active" id="bp_infinity" data-min-width="769"><!-- responsive breakpoint node -->
    <div class="clearfix borderbox" id="page"><!-- group -->
     <div class="clearfix grpelem" id="ppu1100"><!-- column -->
      <div class="clearfix colelem" id="pu1100"><!-- group -->
@@ -80,6 +80,44 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <a class="nonblock nontext clip_frame grpelem" id="u2056" href="https://www.instagram.com/sweet.muffin1/"><!-- image --><img class="block temp_no_img_src" id="u2056_img" data-orig-src="images/ig%20icon.png?crc=3779484951" alt="" data-heightwidthratio="0.9857142857142858" data-image-width="70" data-image-height="69" src="images/blank.gif?crc=4208392903"/></a>
    </div>
   </div>
+  <div class="breakpoint" id="bp_768" data-min-width="481" data-max-width="768"><!-- responsive breakpoint node -->
+   <div class="clearfix borderbox temp_no_id" data-orig-id="page"><!-- group -->
+    <div class="clearfix grpelem temp_no_id" data-orig-id="ppu1100"><!-- column -->
+     <div class="clearfix colelem temp_no_id" data-orig-id="pu1100"><!-- group -->
+      <div class="clip_frame grpelem temp_no_id" data-orig-id="u1100"><!-- image -->
+       <img class="block temp_no_id temp_no_img_src" data-orig-src="images/logo1no%20word%20.png?crc=3940991931" alt="" data-heightwidthratio="1.0597014925373134" data-image-width="67" data-image-height="71" data-orig-id="u1100_img" src="images/blank.gif?crc=4208392903"/>
+      </div>
+      <nav class="MenuBar clearfix grpelem temp_no_id" data-orig-id="menuu184"><!-- horizontal box -->
+       <div class="MenuItemContainer clearfix grpelem temp_no_id" data-orig-id="u185"><!-- vertical box -->
+        <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem temp_no_id" href="index.html" data-orig-id="u188"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u191-4"><!-- content --><span class="placeholder" data-placeholder-for="u191-4_0_content"><!-- placeholder node --></span></div></a>
+       </div>
+       <div class="MenuItemContainer clearfix grpelem temp_no_id" data-orig-id="u192"><!-- vertical box -->
+        <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive borderbox clearfix colelem temp_no_id" href="about.html" data-orig-id="u193"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u196-4"><!-- content --><span class="placeholder" data-placeholder-for="u196-4_0_content"><!-- placeholder node --></span></div></a>
+       </div>
+       <div class="MenuItemContainer clearfix grpelem temp_no_id" data-orig-id="u251"><!-- vertical box -->
+        <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem temp_no_id" href="portfolio.html" data-orig-id="u254"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u256-4"><!-- content --><span class="placeholder" data-placeholder-for="u256-4_0_content"><!-- placeholder node --></span></div></a>
+       </div>
+       <div class="MenuItemContainer clearfix grpelem temp_no_id" data-orig-id="u284"><!-- vertical box -->
+        <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem temp_no_id" href="contact.html" data-orig-id="u287"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u289-4"><!-- content --><span class="placeholder" data-placeholder-for="u289-4_0_content"><!-- placeholder node --></span></div></a>
+       </div>
+      </nav>
+     </div>
+     <div class="clearfix colelem temp_no_id" data-orig-id="pu395"><!-- group -->
+      <span class="browser_width grpelem placeholder" data-placeholder-for="u395-bw_content"><!-- placeholder node --></span>
+      <img class="grpelem temp_no_id temp_no_img_src" alt="ABOUT ME" data-orig-src="images/u372-42.png?crc=4147887526" data-image-width="304" data-orig-id="u372-4" src="images/blank.gif?crc=4208392903"/><!-- rasterized frame -->
+     </div>
+     <div class="clearfix colelem temp_no_id" data-orig-id="pu375"><!-- group -->
+      <div class="clip_frame grpelem temp_no_id" data-orig-id="u375"><!-- image -->
+       <img class="block temp_no_id temp_no_img_src" data-orig-src="images/img_0082.jpg?crc=4213464063" alt="" data-heightwidthratio="1.7816593886462881" data-image-width="229" data-image-height="408" data-orig-id="u375_img" src="images/blank.gif?crc=4208392903"/>
+      </div>
+      <span class="clearfix grpelem placeholder" data-placeholder-for="u388-7_content"><!-- placeholder node --></span>
+     </div>
+    </div>
+    <div class="verticalspacer" data-offset-top="684" data-content-above-spacer="681" data-content-below-spacer="110" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <a class="nonblock nontext clip_frame grpelem temp_no_id" href="http://www.linkedin.com/in/karla-arroyo-357641a5" data-orig-id="u2044"><!-- image --><img class="block temp_no_id temp_no_img_src" data-orig-src="images/linked%20icon.png?crc=207844086" alt="" data-heightwidthratio="0.9821428571428571" data-image-width="56" data-image-height="55" data-orig-id="u2044_img" src="images/blank.gif?crc=4208392903"/></a>
+    <a class="nonblock nontext clip_frame grpelem temp_no_id" href="https://www.instagram.com/sweet.muffin1/" data-orig-id="u2056"><!-- image --><img class="block temp_no_id temp_no_img_src" data-orig-src="images/ig%20icon.png?crc=3779484951" alt="" data-heightwidthratio="1" data-image-width="56" data-image-height="56" data-orig-id="u2056_img" src="images/blank.gif?crc=4208392903"/></a>
+   </div>
+  </div>
   <div class="breakpoint" id="bp_480" data-max-width="480"><!-- responsive breakpoint node -->
    <div class="clearfix borderbox temp_no_id" data-orig-id="page"><!-- group -->
     <div class="clearfix grpelem temp_no_id" data-orig-id="ppu1100"><!-- column -->
@@ -104,16 +142,16 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
      <div class="clearfix colelem temp_no_id" data-orig-id="pu395"><!-- group -->
       <span class="browser_width grpelem placeholder" data-placeholder-for="u395-bw_content"><!-- placeholder node --></span>
-      <img class="grpelem temp_no_id temp_no_img_src" alt="ABOUT ME" data-orig-src="images/u372-42.png?crc=3922213259" data-image-width="262" data-orig-id="u372-4" src="images/blank.gif?crc=4208392903"/><!-- rasterized frame -->
+      <img class="grpelem temp_no_id temp_no_img_src" alt="ABOUT ME" data-orig-src="images/u372-43.png?crc=3922213259" data-image-width="262" data-orig-id="u372-4" src="images/blank.gif?crc=4208392903"/><!-- rasterized frame -->
      </div>
      <div class="clearfix colelem temp_no_id" data-orig-id="pu375"><!-- group -->
       <div class="clip_frame grpelem temp_no_id" data-orig-id="u375"><!-- image -->
-       <img class="block temp_no_id temp_no_img_src" data-orig-src="images/img_0082146x260.jpg?crc=297075994" alt="" data-heightwidthratio="1.7808219178082192" data-image-width="146" data-image-height="260" data-orig-id="u375_img" src="images/blank.gif?crc=4208392903"/>
+       <img class="block temp_no_id temp_no_img_src" data-orig-src="images/img_0082160x284.jpg?crc=4158316813" alt="" data-heightwidthratio="1.779874213836478" data-image-width="159" data-image-height="283" data-orig-id="u375_img" src="images/blank.gif?crc=4208392903"/>
       </div>
       <span class="clearfix grpelem placeholder" data-placeholder-for="u388-7_content"><!-- placeholder node --></span>
      </div>
     </div>
-    <div class="verticalspacer" data-offset-top="920" data-content-above-spacer="917" data-content-below-spacer="73" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer" data-offset-top="992" data-content-above-spacer="989" data-content-below-spacer="73" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <a class="nonblock nontext clip_frame grpelem temp_no_id" href="http://www.linkedin.com/in/karla-arroyo-357641a5" data-orig-id="u2044"><!-- image --><img class="block temp_no_id temp_no_img_src" data-orig-src="images/linked%20icon.png?crc=207844086" alt="" data-heightwidthratio="1" data-image-width="35" data-image-height="35" data-orig-id="u2044_img" src="images/blank.gif?crc=4208392903"/></a>
     <a class="nonblock nontext clip_frame grpelem temp_no_id" href="https://www.instagram.com/sweet.muffin1/" data-orig-id="u2056"><!-- image --><img class="block temp_no_id temp_no_img_src" data-orig-src="images/ig%20icon.png?crc=3779484951" alt="" data-heightwidthratio="1" data-image-width="35" data-image-height="35" data-orig-id="u2056_img" src="images/blank.gif?crc=4208392903"/></a>
    </div>
@@ -136,7 +174,7 @@ Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.resizeHeight('.browser_width');/* resize height */
 Muse.Utils.requestAnimationFrame(function() { $('body').addClass('initialized'); });/* mark body as initialized */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
-Muse.Utils.initWidget('.MenuBar', ['#bp_infinity', '#bp_480'], function(elem) { return $(elem).museMenu(); });/* unifiedNavBar */
+Muse.Utils.initWidget('.MenuBar', ['#bp_infinity', '#bp_768', '#bp_480'], function(elem) { return $(elem).museMenu(); });/* unifiedNavBar */
 Muse.Utils.fullPage('#page');/* 100% height page */
 $( '.breakpoint' ).registerBreakpoint();/* Register breakpoints */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
