--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Home</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3968392978"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=368651240" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3870572421"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=300449588" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=3824530138"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=407341309" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=78420843" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -36,7 +36,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    </head>
  <body class="museBGSize">
 
-  <div class="breakpoint active" id="bp_infinity" data-min-width="481"><!-- responsive breakpoint node -->
+  <div class="breakpoint active" id="bp_infinity" data-min-width="769"><!-- responsive breakpoint node -->
    <div class="clearfix borderbox" id="page"><!-- group -->
     <div class="clearfix grpelem" id="ppmenuu184"><!-- column -->
      <div class="clearfix colelem" id="pmenuu184"><!-- group -->
@@ -98,6 +98,57 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <a class="nonblock nontext clip_frame grpelem" id="u2056" href="https://www.instagram.com/sweet.muffin1/"><!-- image --><img class="block temp_no_img_src" id="u2056_img" data-orig-src="images/ig%20icon.png?crc=3779484951" alt="" data-heightwidthratio="0.9857142857142858" data-image-width="70" data-image-height="69" src="images/blank.gif?crc=4208392903"/></a>
    </div>
   </div>
+  <div class="breakpoint" id="bp_768" data-min-width="481" data-max-width="768"><!-- responsive breakpoint node -->
+   <div class="clearfix borderbox temp_no_id" data-orig-id="page"><!-- group -->
+    <div class="clearfix grpelem temp_no_id" data-orig-id="ppmenuu184"><!-- column -->
+     <div class="clearfix colelem temp_no_id" data-orig-id="pmenuu184"><!-- group -->
+      <nav class="MenuBar clearfix grpelem temp_no_id" data-orig-id="menuu184"><!-- horizontal box -->
+       <div class="MenuItemContainer clearfix grpelem temp_no_id" data-orig-id="u185"><!-- vertical box -->
+        <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive borderbox clearfix colelem temp_no_id" href="index.html" data-orig-id="u188"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u191-4"><!-- content --><span class="placeholder" data-placeholder-for="u191-4_0_content"><!-- placeholder node --></span></div></a>
+       </div>
+       <div class="MenuItemContainer clearfix grpelem temp_no_id" data-orig-id="u192"><!-- vertical box -->
+        <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem temp_no_id" href="about.html" data-orig-id="u193"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u196-4"><!-- content --><span class="placeholder" data-placeholder-for="u196-4_0_content"><!-- placeholder node --></span></div></a>
+       </div>
+       <div class="MenuItemContainer clearfix grpelem temp_no_id" data-orig-id="u251"><!-- vertical box -->
+        <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem temp_no_id" href="portfolio.html" data-orig-id="u254"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u256-4"><!-- content --><span class="placeholder" data-placeholder-for="u256-4_0_content"><!-- placeholder node --></span></div></a>
+       </div>
+       <div class="MenuItemContainer clearfix grpelem temp_no_id" data-orig-id="u284"><!-- vertical box -->
+        <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem temp_no_id" href="contact.html" data-orig-id="u287"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem temp_no_id" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u289-4"><!-- content --><span class="placeholder" data-placeholder-for="u289-4_0_content"><!-- placeholder node --></span></div></a>
+       </div>
+      </nav>
+      <span class="browser_width grpelem placeholder" data-placeholder-for="u395-bw_content"><!-- placeholder node --></span>
+      <div class="clip_frame grpelem temp_no_id" data-orig-id="u1100"><!-- image -->
+       <img class="block temp_no_id temp_no_img_src" data-orig-src="images/logo1no%20word%20.png?crc=3940991931" alt="" data-heightwidthratio="1.0597014925373134" data-image-width="67" data-image-height="71" data-orig-id="u1100_img" src="images/blank.gif?crc=4208392903"/>
+      </div>
+      <img class="grpelem temp_no_id temp_no_img_src" alt="Welcome To The" data-orig-src="images/u368-42.png?crc=3968171511" data-image-width="364" data-orig-id="u368-4" src="images/blank.gif?crc=4208392903"/><!-- rasterized frame -->
+     </div>
+     <span class="clearfix colelem placeholder" data-placeholder-for="u1185-4_content"><!-- placeholder node --></span>
+     <div class="clip_frame colelem temp_no_id" data-orig-id="u1033"><!-- image -->
+      <img class="block temp_no_id temp_no_img_src" data-orig-src="images/art1.jpg?crc=183061324" alt="" data-heightwidthratio="1.2101063829787233" data-image-width="376" data-image-height="455" data-orig-id="u1033_img" src="images/blank.gif?crc=4208392903"/>
+     </div>
+     <span class="clearfix colelem placeholder" data-placeholder-for="pu1043_content"><!-- placeholder node --></span>
+     <div class="clearfix colelem temp_no_id" data-orig-id="pu943"><!-- group -->
+      <div class="rounded-corners clearfix grpelem temp_no_id" data-orig-id="u943"><!-- group -->
+       <div class="clip_frame grpelem temp_no_id" data-orig-id="u958"><!-- image -->
+        <img class="block temp_no_id temp_no_img_src" data-orig-src="images/paint.png?crc=26535142" alt="" data-heightwidthratio="1" data-image-width="58" data-image-height="58" data-orig-id="u958_img" src="images/blank.gif?crc=4208392903"/>
+       </div>
+      </div>
+      <div class="clip_frame grpelem temp_no_id" data-orig-id="u968"><!-- image -->
+       <img class="block temp_no_id temp_no_img_src" data-orig-src="images/if_drawing_pen_45473.png?crc=403383472" alt="" data-heightwidthratio="1" data-image-width="55" data-image-height="55" data-orig-id="u968_img" src="images/blank.gif?crc=4208392903"/>
+      </div>
+      <span class="rounded-corners grpelem placeholder" data-placeholder-for="u978_content"><!-- placeholder node --></span>
+      <div class="rounded-corners clearfix grpelem temp_no_id" data-orig-id="u1046"><!-- group -->
+       <div class="clip_frame grpelem temp_no_id" data-orig-id="u1049"><!-- image -->
+        <img class="block temp_no_id temp_no_img_src" data-orig-src="images/if_camera_unmount2_6769.png?crc=3763062681" alt="" data-heightwidthratio="1" data-image-width="58" data-image-height="58" data-orig-id="u1049_img" src="images/blank.gif?crc=4208392903"/>
+       </div>
+      </div>
+     </div>
+    </div>
+    <div class="verticalspacer" data-offset-top="849" data-content-above-spacer="847" data-content-below-spacer="110" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <a class="nonblock nontext clip_frame grpelem temp_no_id" href="http://www.linkedin.com/in/karla-arroyo-357641a5" data-orig-id="u2044"><!-- image --><img class="block temp_no_id temp_no_img_src" data-orig-src="images/linked%20icon.png?crc=207844086" alt="" data-heightwidthratio="0.9821428571428571" data-image-width="56" data-image-height="55" data-orig-id="u2044_img" src="images/blank.gif?crc=4208392903"/></a>
+    <a class="nonblock nontext clip_frame grpelem temp_no_id" href="https://www.instagram.com/sweet.muffin1/" data-orig-id="u2056"><!-- image --><img class="block temp_no_id temp_no_img_src" data-orig-src="images/ig%20icon.png?crc=3779484951" alt="" data-heightwidthratio="1" data-image-width="56" data-image-height="56" data-orig-id="u2056_img" src="images/blank.gif?crc=4208392903"/></a>
+   </div>
+  </div>
   <div class="breakpoint" id="bp_480" data-max-width="480"><!-- responsive breakpoint node -->
    <div class="clearfix borderbox temp_no_id" data-orig-id="page"><!-- group -->
     <div class="clearfix grpelem" id="ppu1100"><!-- column -->
@@ -122,7 +173,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
      <div class="clearfix colelem" id="pu395"><!-- group -->
       <span class="browser_width grpelem placeholder" data-placeholder-for="u395-bw_content"><!-- placeholder node --></span>
-      <img class="grpelem temp_no_id temp_no_img_src" alt="Welcome To The" data-orig-src="images/u368-42.png?crc=409111584" data-image-width="416" data-orig-id="u368-4" src="images/blank.gif?crc=4208392903"/><!-- rasterized frame -->
+      <img class="grpelem temp_no_id temp_no_img_src" alt="Welcome To The" data-orig-src="images/u368-43.png?crc=409111584" data-image-width="417" data-orig-id="u368-4" src="images/blank.gif?crc=4208392903"/><!-- rasterized frame -->
      </div>
      <span class="clearfix colelem placeholder" data-placeholder-for="u1185-4_content"><!-- placeholder node --></span>
      <div class="clip_frame colelem temp_no_id" data-orig-id="u1033"><!-- image -->
@@ -169,7 +220,7 @@ Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.resizeHeight('.browser_width');/* resize height */
 Muse.Utils.requestAnimationFrame(function() { $('body').addClass('initialized'); });/* mark body as initialized */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
-Muse.Utils.initWidget('.MenuBar', ['#bp_infinity', '#bp_480'], function(elem) { return $(elem).museMenu(); });/* unifiedNavBar */
+Muse.Utils.initWidget('.MenuBar', ['#bp_infinity', '#bp_768', '#bp_480'], function(elem) { return $(elem).museMenu(); });/* unifiedNavBar */
 Muse.Utils.fullPage('#page');/* 100% height page */
 $( '.breakpoint' ).registerBreakpoint();/* Register breakpoints */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
